--- a/package.json
+++ b/package.json
@@ -11,8 +11,24 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "compression": "1.7.4",
+    "dotenv": "^16.3.1",
+    "env-var": "7.4.1",
+    "express": "4.18.2",
+    "helmet": "7.1.0",
+    "jsonwebtoken": "9.0.2",
+    "mongoose": "^8.0.4"
+  },
   "devDependencies": {
+    "@types/bcryptjs": "2.4.6",
+    "@types/compression": "1.7.5",
+    "@types/express": "4.17.21",
+    "@types/jsonwebtoken": "9.0.5",
+    "@types/morgan": "1.9.9",
     "@types/node": "20.11.0",
+    "morgan": "1.10.0",
     "nodemon": "3.0.2",
     "rimraf": "5.0.5",
     "ts-node": "10.9.2",
