Añadiendo PostgreSQL y Prisma al proyecto

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,11 @@
 PORT=
+# Mongo
 MONGO_URI=
 MONGO_DB_NAME=
+# Postgres
+POSTGRES_URI=
+POSTGRES_USER=
+POSTGRES_PASSWORD=
+POSTGRES_DB=
+# JWT
 JWT_SECRET=
