--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "5.8.0",
     "bcryptjs": "^2.4.3",
     "compression": "1.7.4",
     "dotenv": "^16.3.1",
@@ -30,6 +31,7 @@
     "@types/node": "20.11.0",
     "morgan": "1.10.0",
     "nodemon": "3.0.2",
+    "prisma": "5.8.0",
     "rimraf": "5.0.5",
     "ts-node": "10.9.2",
     "typescript": "5.3.3"
