--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "api-clean-architecture",
   "version": "1.0.0",
-  "description": "",
+  "description": "API REST que implementa un sistema de autenticación utilizando Clean Architecture",
   "main": "app.ts",
   "scripts": {
     "dev": "nodemon",
@@ -13,14 +13,14 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "5.8.1",
-    "bcryptjs": "^2.4.3",
+    "bcryptjs": "2.4.3",
     "compression": "1.7.4",
-    "dotenv": "^16.3.1",
+    "dotenv": "16.4.1",
     "env-var": "7.4.1",
     "express": "4.18.2",
     "helmet": "7.1.0",
     "jsonwebtoken": "9.0.2",
-    "mongoose": "^8.1.0"
+    "mongoose": "8.1.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "2.4.6",
@@ -28,9 +28,9 @@
     "@types/express": "4.17.21",
     "@types/jsonwebtoken": "9.0.5",
     "@types/morgan": "1.9.9",
-    "@types/node": "20.11.4",
+    "@types/node": "20.11.6",
     "morgan": "1.10.0",
-    "nodemon": "3.0.2",
+    "nodemon": "3.0.3",
     "prisma": "5.8.1",
     "rimraf": "5.0.5",
     "ts-node": "10.9.2",
