--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "API REST que implementa un sistema de autenticación utilizando Clean Architecture",
   "main": "app.ts",
   "scripts": {
-    "dev": "nodemon",
-    "build": "rimraf ./dist && tsc && tsc-alias",
-    "start": "pnpm run build && node dist/app.js",
+    "dev": "tsx watch src/app.ts",
+    "start": "tsx src/app.ts",
     "prisma:generate": "prisma generate"
   },
   "keywords": [],
@@ -33,10 +32,8 @@
     "morgan": "1.10.0",
     "nodemon": "3.0.3",
     "prisma": "5.9.1",
-    "rimraf": "5.0.5",
     "ts-node": "10.9.2",
-    "tsc-alias": "1.8.8",
-    "tsconfig-paths": "4.2.0",
+    "tsx": "4.7.0",
     "typescript": "5.3.3"
   }
 }
